--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="content_label">The Content is</string>
     <string name="content_value">[content]</string>
     <string name="action_refresh">Refresh</string>
+
+    <string name="rh_label">Humidity: </string>
+    <string name="wind_label">Wind: </string>
+    <string name="barometer_label">Barometer: </string>
+    <string name="cloud_label">Cloud Cover: </string>
 </resources>
